@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix error_reporting directive check (#1489323)
 - Make cached message size limit configurable - messages_cache_threshold (#1489317)
 - Make identities matching case insensitive (#1485480)
 - Fix issue where too big message data was stored in cache causing sql errors (#1489316)
